--- a/src/Component/style.css
+++ b/src/Component/style.css
@@ -81,7 +81,12 @@ body{
     font-size: 20px;
     font-style: unset;
     font-weight: bold;
-    position: relative;
-    top: 220px;
-    right: 300px;
+    position: fixed;
+    margin-top: 300px;
+    margin-right: 50px;
+   }
+   .heading1{
+      position: absolute;
+      top: 2px;
+      text-align: center;
    }
